# PrimeFinder

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_usage.cpp
include/: prime_counter.hpp
src/: CMakeLists.txt  prime_counter.cpp
tests/: CMakeLists.txt  test_prime_counter.cpp
